# polymarket-data-dolthub-jobs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: validate_and_run.yml
docs/: Dependencies_Data_Collection.md
dolt_schemas/: bronze_gamma_event_series_link.sql  bronze_gamma_event_tag_link.sql  bronze_gamma_events.sql  bronze_gamma_markets.sql  bronze_gamma_series.sql  bronze_gamma_tags.sql  entry_outcome_dependencies.sql  entry_outcome_dependencies_extra.sql  foreign_keys.sql  silver_market_outcomes.sql
src/polymarket_data_dolthub_jobs/: __init__.py  bronze_gamma_markets.py  entry_outcome_dependencies.py  generate_sql_schemas.py  markets_dataset.py  path_helpers.py  pipeline.py  request_helpers.py  silver_market_outcomes.py  step_1_download_raw_gamma.py  step_1b_download_raw_gamma_by_id.py  step_2a_bronze_gamma_markets.py  step_2b_bronze_gamma_events.py  step_2c_bronze_gamma_series.py  step_2d_bronze_gamma_tags.py  step_3_silver_market_outcomes.py  tables.py
tests/: test_placeholder.py
